--- a/.github/workflows/snaplet-restore.yml
+++ b/.github/workflows/snaplet-restore.yml
@@ -2,7 +2,7 @@ name: Snaplet Restore
 on:
   workflow_dispatch:
     schedule:
-      - cron: '0 4 * * 1-5' # At 04:00 on every day-of-week from Monday through Friday.
+      - cron: '5 * * * *' # At 04:00 on every day-of-week from Monday through Friday.
 jobs:
   snaplet-restore-snapshot:
     runs-on: ubuntu-latest
