--- a/.github/workflows/snaplet-restore.yml
+++ b/.github/workflows/snaplet-restore.yml
@@ -10,8 +10,10 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install Snaplet CLI
         run: curl -sL https://app.snaplet.dev/get-cli/ | bash
-      - name: Restore Snapshot
+      - name: Restore Snapshot create
         run: snaplet snapshot create -y
+      - name: Restore Snapshot restore
+        run: snaplet snapshot restore -y --latest
         env:
           SNAPLET_DATABASE_URL: ${{ secrets.SNAPLET_DATA_TARGET_DB_URL }}
           SNAPLET_ACCESS_TOKEN: ${{ secrets.SNAPLET_ACCESS_TOKEN }}
