--- a/.github/workflows/snaplet-restore.yml
+++ b/.github/workflows/snaplet-restore.yml
@@ -1,7 +1,7 @@
 name: Snaplet Restore
 on: 
     schedule:
-      - cron: '*/10 * * * *'
+      - cron: '* * * * 5'
     workflow_dispatch:  
 jobs:
   snaplet-restore-snapshot:
